--- a/About.html
+++ b/About.html
@@ -24,7 +24,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item ">
-                    <a class="nav-link" href="/index.html">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/KcoderBootstrap/index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="/KcoderBootstrap/About.html">About</a>
@@ -43,7 +43,7 @@
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/Contact.html">Contact Us</a>
+                    <a class="nav-link" href="/KcoderBootstrap/Contact.html">Contact Us</a>
                 </li>
 
 
